--- a/css/css-demo/styles/elegant-styles.css
+++ b/css/css-demo/styles/elegant-styles.css
@@ -11,8 +11,7 @@ body {
   background-color: white;
   margin: 30px auto;
   max-width: 960px;
-  font-size: 1.2em;
-}
+  font-size: 1.2em;}
 
 ul {
   list-style-type: square;
