--- a/css/css-demo/styles/practice.css
+++ b/css/css-demo/styles/practice.css
@@ -16,9 +16,10 @@ section.job {
   padding: 10px;
   margin-top: 30px;
   border-radius: 15px;
-
+  color: hover: {red};
 }
 
-.new {
+section.new {
 	font-size: .8em;
 }
+
